--- a/app/src/main/res/layout/send_msg.xml
+++ b/app/src/main/res/layout/send_msg.xml
@@ -92,6 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
+                    android:visibility="gone"
                     android:paddingBottom="3dp"
                     android:src="@drawable/message_got_receipt_from_target" />
 
