--- a/app/src/main/res/layout/send_msg.xml
+++ b/app/src/main/res/layout/send_msg.xml
@@ -101,7 +101,7 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/littleTriangle"
+            android:id="@+id/triangle"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
