--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/chat_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
     android:background="@color/mainBackground"
     tools:context=".ChatActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/listView"
         android:padding="5dp"
         android:layout_marginBottom="10dp"
         android:layout_above="@+id/bottomlayout"/>
+
 
     <LinearLayout
         android:id="@+id/bottomlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:paddingBottom="10dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginBottom="10dp"
@@ -49,12 +54,14 @@
             <EditText
                 android:id="@+id/chat_edit_text"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:background="@null"
                 android:hint="Type your message"
                 android:inputType="textMultiLine"
                 android:singleLine="false"
+                android:maxLines="6"
+                android:scrollbars="vertical"
                 android:textColor="#ccffffff"
                 android:textColorHint="#c4c0bd"
                 android:textSize="18sp" />
