--- a/app/src/main/res/layout/list_item_main.xml
+++ b/app/src/main/res/layout/list_item_main.xml
@@ -45,10 +45,10 @@
             android:id="@+id/thumbnail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginRight="15dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginEnd="15dp"
             android:background="@drawable/round_text"
-            android:backgroundTint="#FFFFFF"
+            android:backgroundTint="@color/colorPrimary"
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="3dip"
@@ -61,8 +61,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/thumbnail"
-            android:layout_toRightOf="@id/thumbnail"
-            android:text="Username"
+            android:layout_toEndOf="@id/thumbnail"
+            android:text="@string/username"
             android:textColor="#ffffff"
             android:textSize="18sp"
             android:textStyle="bold"
