--- a/app/src/main/res/layout/receive_msg.xml
+++ b/app/src/main/res/layout/receive_msg.xml
@@ -50,7 +50,7 @@
         android:background="@color/mainBackground">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/triangle"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:rotation="270"
