--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -51,6 +51,56 @@
             android:orientation="horizontal"
             android:padding="10dp">
 
+            <LinearLayout
+                android:id="@+id/chat_reply"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/reply_receive_background"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="3dp"
+                    android:gravity="right"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/reply_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
+                        android:text="You"
+                        android:textColor="#000833"
+                        android:textStyle="bold" />
+
+                    <View
+                        android:id="@+id/view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+
+                    <ImageButton
+                        android:id="@+id/close_reply"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:rotation="45"
+                        app:srcCompat="@drawable/add" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxWidth="180dp"
+                    android:text="Test view here"
+                    android:textColor="#A3A3A3" />
+            </LinearLayout>
+
             <EditText
                 android:id="@+id/chat_edit_text"
                 android:layout_width="match_parent"
