--- a/app/src/main/res/layout/send_msg.xml
+++ b/app/src/main/res/layout/send_msg.xml
@@ -21,24 +21,36 @@
             android:paddingEnd="20dp">
 
             <ImageButton
+                android:id="@+id/reply_button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:tint="#000000"
+                app:srcCompat="@drawable/baseline_reply_24" />
+
+            <ImageButton
+                android:id="@+id/copy_button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:rotation="90"
+                android:text="Info"
+                android:tint="#000000"
+                app:srcCompat="@drawable/baseline_filter_none_24" />
+
+            <ImageButton
                 android:id="@+id/info_button"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:text="Info"
+                android:tint="#000000"
                 app:srcCompat="@drawable/ic_info_outline" />
 
             <ImageButton
-                android:id="@+id/edit_button"
+                android:id="@+id/delete_button"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:text="Edit"
-                app:srcCompat="@drawable/ic_edit" />
-            <ImageButton
-                android:id="@+id/info_button1"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:backgroundTint="#E10000"
                 android:text="Info"
-                app:srcCompat="@drawable/ic_info_outline" />
+                app:srcCompat="@android:drawable/ic_menu_delete" />
 
         </LinearLayout>
     </FrameLayout>
@@ -87,6 +99,33 @@
                 android:layout_gravity="bottom|end"
                 android:orientation="horizontal"
                 android:paddingEnd="5dp">
+
+                <LinearLayout
+                android:id="@+id/reply_send_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/reply_background"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:text="TextView"
+                    android:textColor="#000833"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/reply_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxWidth="180dp"
+                    android:text="Test view here"
+                    android:textColor="#A3A3A3" />
+            </LinearLayout>
 
                 <TextView
                     android:id="@+id/time"
