--- a/app/src/main/res/menu/options.xml
+++ b/app/src/main/res/menu/options.xml
@@ -2,6 +2,10 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="refresh"
+    <item android:title="@string/refresh"
         android:id="@+id/refresh"/>
+    <item android:title="@string/open_contacts"
+        android:id="@+id/contacts"/>
+    <item android:title="@string/share_with_friends"
+        android:id="@+id/share"/>
 </menu>
