--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -44,7 +44,7 @@
             android:orientation="vertical">
 
             <ImageButton
-                android:id="@+id/attachment3"
+                android:id="@+id/camera"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="bottom|center"
@@ -55,7 +55,7 @@
 
 
             <ImageButton
-                android:id="@+id/attachment2"
+                android:id="@+id/image"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="bottom|center"
@@ -65,7 +65,7 @@
                 android:translationY="110dp" />
 
             <ImageButton
-                android:id="@+id/attachment1"
+                android:id="@+id/file"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="bottom|center"
@@ -108,7 +108,7 @@
                 android:background="@drawable/reply_receive_background"
                 android:orientation="vertical"
                 android:padding="10dp"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
