--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -8,7 +8,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:background="@color/mainBackground"
-        tools:context=".MainActivity">>
+        tools:context=".MainActivity">
 
 
         <RelativeLayout
@@ -46,7 +46,7 @@
                 android:typeface="sans" />
 
             <TextView
-                android:id="@+id/read_time"
+                android:id="@+id/read"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/read_text"
@@ -94,7 +94,7 @@
                 android:typeface="sans" />
 
             <TextView
-                android:id="@+id/deliver_time"
+                android:id="@+id/deliver"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/deliver_text"
