--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/mainBackground"
+    tools:context=".ChatActivity">
+
+<RelativeLayout
     android:id="@+id/chat_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fitsSystemWindows="true"
-    android:background="@color/mainBackground"
-    tools:context=".ChatActivity">
+    android:fitsSystemWindows="true">
 
     <View
         android:id="@+id/test_layout"
@@ -38,43 +42,6 @@
         android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageButton
-                android:id="@+id/camera"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="bottom|center"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/input_circle"
-                android:src="@drawable/baseline_camera_alt_white_24"
-                android:translationY="150dp" />
-
-
-            <ImageButton
-                android:id="@+id/image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="bottom|center"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/input_circle"
-                android:src="@drawable/baseline_insert_photo_white_24"
-                android:translationY="110dp" />
-
-            <ImageButton
-                android:id="@+id/file"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="bottom|center"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/input_circle"
-                android:src="@drawable/baseline_insert_drive_file_white_24"
-                android:tint="#FFFFFF"
-                android:translationY="60dp" />
-
 
             <ImageButton
                 android:id="@+id/attachment"
@@ -86,7 +53,7 @@
                 android:src="@drawable/baseline_attachment_white_24"
                 android:tint="#FFFFFF" />
 
-        </LinearLayout>
+        
 
         <LinearLayout
             android:layout_width="0dp"
@@ -178,3 +145,44 @@
     </LinearLayout>
 
 </RelativeLayout>
+
+
+            <ImageButton
+                android:id="@+id/camera"
+                android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="bottom|left"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/input_circle"
+        android:src="@drawable/baseline_camera_alt_white_24"
+        android:translationX="10dp"
+        android:translationY="@dimen/st_normal"
+        android:visibility="gone" />
+
+
+            <ImageButton
+                android:id="@+id/image"
+                android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="bottom|left"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/input_circle"
+        android:src="@drawable/baseline_insert_photo_white_24"
+        android:translationX="10dp"
+        android:translationY="@dimen/st_normal"
+        android:visibility="gone" />
+
+            <ImageButton
+                android:id="@+id/file"
+                android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="bottom|left"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/input_circle"
+        android:src="@drawable/baseline_insert_drive_file_white_24"
+        android:tint="#FFFFFF"
+        android:translationX="10dp"
+        android:translationY="@dimen/st_normal"
+        android:visibility="gone" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
