--- a/app/src/main/res/layout/receive_file.xml
+++ b/app/src/main/res/layout/receive_file.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center_vertical"
     app:dragFromEdge="left"
     android:id="@+id/container"
+    tools:ignore="ContentDescription"
     android:layout_marginTop="5dp">
 
     <FrameLayout
@@ -66,129 +68,129 @@
             android:src="@drawable/ic_right_angled_triangle"
             android:tint="#212e36" />
 
-    <LinearLayout
-        android:id="@+id/incoming_layout_bubble"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="60dp"
-        android:background="@drawable/to_msg_background"
-        android:orientation="vertical"
-        android:padding="10dp">
-
         <LinearLayout
-            android:id="@+id/reply_receive_layout"
-            android:layout_width="match_parent"
+            android:id="@+id/incoming_layout_bubble"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/reply_receive_background"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="60dp"
+            android:background="@drawable/to_msg_background"
             android:orientation="vertical"
-            android:padding="10dp"
-            android:visibility="gone">
+            android:padding="10dp">
 
-            <TextView
-                android:id="@+id/name"
+            <LinearLayout
+                android:id="@+id/reply_receive_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:text="TextView"
-                android:textColor="#000833"
-                android:textStyle="bold" />
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/reply_receive_background"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:visibility="gone">
 
-            <TextView
-                android:id="@+id/reply_text"
-                android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:text="TextView"
+                    android:textColor="#000833"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/reply_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxWidth="180dp"
+                    android:text="Test view here"
+                    android:textColor="#A3A3A3" />
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="275dp"
                 android:layout_height="wrap_content"
-                android:maxWidth="180dp"
-                android:text="Test view here"
-                android:textColor="#A3A3A3" />
-        </LinearLayout>
+                android:layout_marginBottom="5dp"
+                app:cardBackgroundColor="@android:color/transparent"
+                app:cardCornerRadius="6dp"
+                app:cardElevation="2dp">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="275dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            app:cardBackgroundColor="@android:color/transparent"
-            app:cardCornerRadius="6dp"
-            app:cardElevation="2dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="8dp">
+
+                    <ImageView
+                        android:id="@+id/file_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:tint="#F3F3F3"
+                        app:srcCompat="@drawable/baseline_insert_drive_file_24" />
+
+                    <TextView
+                        android:id="@+id/file_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:text="app-debu.apk app-"
+                        android:textColor="#B3B0B0"
+                        android:textSize="18sp" />
+
+                    <ImageButton
+                        android:id="@+id/download_file"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|right"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent"
+                        android:visibility="visible"
+                        app:srcCompat="@android:drawable/stat_sys_download" />
+
+                    <ProgressBar
+                        android:id="@+id/download_progress"
+                        style="?android:attr/progressBarStyle"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_weight="1"
+                        android:visibility="gone" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="8dp">
-
-                <ImageView
-                    android:id="@+id/file_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:tint="#F3F3F3"
-                    app:srcCompat="@drawable/baseline_insert_drive_file_24" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/file_name"
+                    android:id="@+id/file_type"
+                    style="@style/chat_timings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:text="app-debu.apk app-"
-                    android:textColor="#B3B0B0"
-                    android:textSize="18sp" />
+                    android:layout_gravity="bottom|left"
+                    android:text="File type" />
 
-                <ImageButton
-                    android:id="@+id/file_download"
+                <View
+                    android:id="@+id/view"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/time"
+                    style="@style/chat_timings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center|right"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:visibility="visible"
-                    app:srcCompat="@android:drawable/stat_sys_download" />
-
-                <ProgressBar
-                    android:id="@+id/download_file"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_weight="1"
-                    android:visibility="gone" />
+                    android:layout_gravity="bottom|right"
+                    android:paddingEnd="5dp"
+                    android:text="11:15 PM" />
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/file_type"
-                style="@style/chat_timings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|left"
-                android:text="File type" />
-
-            <View
-                android:id="@+id/view"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-            <TextView
-                android:id="@+id/time"
-                style="@style/chat_timings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right"
-                android:paddingEnd="5dp"
-                android:text="11:15 PM" />
         </LinearLayout>
-
-    </LinearLayout>
 
     </RelativeLayout>
 
