--- a/app/src/main/res/layout/receive_image.xml
+++ b/app/src/main/res/layout/receive_image.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center_vertical"
     app:dragFromEdge="left"
     android:id="@+id/container"
+    tools:ignore="ContentDescription"
     android:layout_marginTop="5dp">
 
     <FrameLayout
@@ -117,7 +119,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/main"
                     android:layout_width="300dp"
                     android:layout_height="300dp"
                     android:adjustViewBounds="false"
