--- a/app/src/main/res/layout/send_file.xml
+++ b/app/src/main/res/layout/send_file.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.leagueofshadows.enc.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
     app:dragFromEdge="right"
     android:id="@+id/container"
+    tools:ignore="ContentDescription"
     android:layout_marginTop="5dp">
 
     <FrameLayout
@@ -32,7 +34,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:rotation="90"
-                android:text="Info"
                 android:tint="#000000"
                 app:srcCompat="@drawable/baseline_filter_none_24" />
 
@@ -40,7 +41,6 @@
                 android:id="@+id/info_button"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:text="Info"
                 android:tint="#000000"
                 app:srcCompat="@drawable/ic_info_outline" />
 
@@ -49,7 +49,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#E10000"
-                android:text="Info"
                 app:srcCompat="@android:drawable/ic_menu_delete" />
 
         </LinearLayout>
@@ -62,169 +61,153 @@
         android:background="@color/mainBackground">
 
         <ImageView
-    android:id="@+id/triangle"
-    android:layout_width="30dp"
-    android:layout_height="30dp"
-    android:layout_alignParentRight="true"
-    android:rotation="180"
-    android:src="@drawable/ic_right_angled_triangle"
-    android:tint="#2A6791"
-    android:visibility="visible" />
-
-    <LinearLayout
-        android:id="@+id/outgoing_layout_bubble"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/from_msg_background"
-        android:orientation="vertical"
-        android:padding="10dp">
-
-        <LinearLayout
-            android:id="@+id/reply_send_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/reply_background"
-            android:orientation="vertical"
-            android:padding="10dp"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:text="TextView"
-                android:textColor="#000833"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/reply_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxWidth="180dp"
-                android:text="Test view here"
-                android:textColor="#A3A3A3" />
-        </LinearLayout>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="275dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            app:cardBackgroundColor="@android:color/transparent"
-            app:cardCornerRadius="6dp"
-            app:cardElevation="2dp">
+            android:id="@+id/triangle"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:rotation="180"
+            android:src="@drawable/ic_right_angled_triangle"
+            android:tint="#2A6791"
+            android:visibility="visible" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:id="@+id/outgoing_layout_bubble"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="8dp">
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="60dp"
+                android:layout_marginEnd="15dp"
+                android:background="@drawable/from_msg_background"
+                android:orientation="vertical"
+                android:padding="10dp">
 
-                <ImageView
-                    android:id="@+id/file_icon"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:id="@+id/reply_send_layout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:tint="#F3F3F3"
-                    app:srcCompat="@drawable/baseline_insert_drive_file_24" />
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/reply_background"
+                    android:orientation="vertical"
+                    android:padding="10dp"
+                    android:visibility="gone">
 
-                <TextView
-                    android:id="@+id/file_name"
-                    android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
+                        android:text="TextView"
+                        android:textColor="#000833"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/reply_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:maxWidth="180dp"
+                        android:text="Test view here"
+                        android:textColor="#A3A3A3" />
+                </LinearLayout>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="275dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:text="app-debu.apk app-"
-                    android:textColor="#B3B0B0"
-                    android:textSize="18sp" />
+                    android:layout_marginBottom="5dp"
+                    app:cardBackgroundColor="@android:color/transparent"
+                    app:cardCornerRadius="6dp"
+                    app:cardElevation="2dp">
 
-                <ImageButton
-                    android:id="@+id/file_download"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center|right"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:visibility="visible"
-                    app:srcCompat="@android:drawable/stat_sys_download" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:background="@drawable/transparent"
+                        android:padding="8dp">
 
-                <ProgressBar
-                    android:id="@+id/download_file"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_weight="1"
-                    android:visibility="gone" />
+                        <ImageView
+                            android:id="@+id/file_icon"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:tint="#F3F3F3"
+                            app:srcCompat="@drawable/baseline_insert_drive_file_24" />
+
+                        <TextView
+                            android:id="@+id/file_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:text="app-debu.apk app-"
+                            android:textColor="#B3B0B0"
+                            android:textSize="18sp" />
+
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="bottom|end"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal"
+                    android:paddingEnd="5dp">
+
+
+                    <TextView
+                        android:id="@+id/time"
+                        style="@style/chat_timings"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
+                        android:text="11:15 PM" />
+
+                    <View
+                        android:id="@+id/view"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+
+
+                    <ImageView
+                        android:id="@+id/sent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:paddingBottom="3dp"
+                        android:src="@drawable/message_got_receipt_from_server"
+                        android:visibility="gone" />
+
+                    <ImageView
+                        android:id="@+id/seen"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:paddingBottom="3dp"
+                        android:src="@drawable/message_got_read_receipt_from_target"
+                        android:visibility="gone" />
+
+                    <ImageView
+                        android:id="@+id/received"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:paddingBottom="3dp"
+                        android:src="@drawable/message_got_receipt_from_target"
+                        android:visibility="gone"
+                         />
+
+                    <ProgressBar
+                        android:id="@+id/waiting"
+                        style="?android:attr/progressBarStyle"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="right"
+                        android:visibility="visible" />
+
+                </LinearLayout>
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom|end"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal"
-            android:paddingEnd="5dp">
-
-
-            <TextView
-                android:id="@+id/time"
-                style="@style/chat_timings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:text="11:15 PM" />
-
-            <View
-                android:id="@+id/view"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-
-            <ImageView
-                android:id="@+id/sent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:paddingBottom="3dp"
-                android:src="@drawable/message_got_receipt_from_server"
-                android:visibility="gone" />
-
-            <ImageView
-                    android:id="@+id/seen"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:paddingBottom="3dp"
-                    android:src="@drawable/message_got_read_receipt_from_target"
-                    android:visibility="gone" />
-
-            <ImageView
-                android:id="@+id/received"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:paddingBottom="3dp"
-                android:src="@drawable/message_got_receipt_from_target"
-                android:visibility="gone" />
-
-            <ProgressBar
-                android:id="@+id/waiting"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="right"
-                android:visibility="visible" />
-
-        </LinearLayout>
-    </LinearLayout>
-</RelativeLayout>
-
+    </RelativeLayout>
 </com.leagueofshadows.enc.SwipeRevealLayout>
