--- a/app/src/main/res/layout/send_image.xml
+++ b/app/src/main/res/layout/send_image.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center_vertical"
     app:dragFromEdge="right"
     android:id="@+id/container"
+    tools:ignore="ContentDescription"
     android:layout_marginTop="5dp">
 
     <FrameLayout
@@ -32,7 +34,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:rotation="90"
-                android:text="Info"
                 android:tint="#000000"
                 app:srcCompat="@drawable/baseline_filter_none_24" />
 
@@ -40,7 +41,6 @@
                 android:id="@+id/info_button"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:text="Info"
                 android:tint="#000000"
                 app:srcCompat="@drawable/ic_info_outline" />
 
@@ -49,7 +49,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#E10000"
-                android:text="Info"
                 app:srcCompat="@android:drawable/ic_menu_delete" />
 
         </LinearLayout>
@@ -63,139 +62,106 @@
         
         
         <ImageView
-    android:id="@+id/triangle"
-    android:layout_width="30dp"
-    android:layout_height="30dp"
-    android:layout_alignParentRight="true"
-    android:rotation="180"
-    android:src="@drawable/ic_right_angled_triangle"
-    android:tint="#2A6791"
-    android:visibility="visible" />
-
-    <LinearLayout
-        android:id="@+id/outgoing_layout_bubble"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/from_msg_background"
-        android:orientation="vertical"
-        android:padding="10dp">
+            android:id="@+id/triangle"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:rotation="180"
+            android:src="@drawable/ic_right_angled_triangle"
+            android:tint="#2A6791"
+            android:visibility="visible" />
 
         <LinearLayout
-            android:id="@+id/reply_send_layout"
-            android:layout_width="match_parent"
+            android:id="@+id/outgoing_layout_bubble"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/reply_background"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/from_msg_background"
             android:orientation="vertical"
-            android:padding="10dp"
-            android:visibility="gone">
+            android:padding="10dp">
 
-            <TextView
-                android:id="@+id/name"
+            <LinearLayout
+                android:id="@+id/reply_send_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:text="TextView"
-                android:textColor="#000833"
-                android:textStyle="bold" />
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/reply_background"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:visibility="gone">
 
-            <TextView
-                android:id="@+id/reply_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxWidth="180dp"
-                android:text="Test view here"
-                android:textColor="#A3A3A3" />
-        </LinearLayout>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:cardBackgroundColor="@android:color/transparent"
-            app:cardCornerRadius="6dp"
-            app:cardElevation="2dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/imageView4"
+                <TextView
+                    android:id="@+id/name"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:layout_alignParentEnd="false"
-                    android:adjustViewBounds="false"
-                    android:alpha="0.2"
-                    app:srcCompat="@drawable/background2" />
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:text="TextView"
+                    android:textColor="#000833"
+                    android:textStyle="bold" />
 
-                <LinearLayout
-                    android:id="@+id/image_overlay"
+                <TextView
+                    android:id="@+id/reply_text"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:background="#A5C3C3C3"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:maxWidth="180dp"
+                    android:text="Test view here"
+                    android:textColor="#A3A3A3" />
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardBackgroundColor="@android:color/transparent"
+                app:cardCornerRadius="6dp"
+                app:cardElevation="2dp">
 
                     <ImageView
-                        android:id="@+id/image_download"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="110dp"
-                        android:tint="#1E1E1E"
-                        android:visibility="visible"
-                        app:srcCompat="@android:drawable/stat_sys_download" />
+                        android:id="@+id/main"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:layout_alignParentEnd="false"
+                        android:adjustViewBounds="false"
+                        android:alpha="1"
+                        app:srcCompat="@drawable/background2" />
 
-                    <ProgressBar
-                        android:id="@+id/image_loading"
-                        style="?android:attr/progressBarStyle"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="130dp"
-                        android:visibility="gone" />
-                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
-            </RelativeLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom|end"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal"
-            android:paddingEnd="5dp">
-
-
-            <TextView
-                android:id="@+id/time"
-                style="@style/chat_timings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:text="11:15 PM" />
-
-            <View
-                android:id="@+id/view"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:layout_gravity="bottom|end"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal"
+                android:paddingEnd="5dp">
 
 
-            <ImageView
-                android:id="@+id/sent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:paddingBottom="3dp"
-                android:src="@drawable/message_got_receipt_from_server"
-                android:visibility="gone" />
+                <TextView
+                    android:id="@+id/time"
+                    style="@style/chat_timings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:text="11:15 PM" />
 
-            <ImageView
+                <View
+                    android:id="@+id/view"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+
+                <ImageView
+                    android:id="@+id/sent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:paddingBottom="3dp"
+                    android:src="@drawable/message_got_receipt_from_server"
+                    android:visibility="gone" />
+
+                <ImageView
                     android:id="@+id/seen"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -204,23 +170,24 @@
                     android:src="@drawable/message_got_read_receipt_from_target"
                     android:visibility="gone" />
 
-            <ImageView
-                android:id="@+id/received"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:paddingBottom="3dp"
-                android:src="@drawable/message_got_receipt_from_target"
-                android:visibility="gone" />
+                <ImageView
+                    android:id="@+id/received"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:paddingBottom="3dp"
+                    android:src="@drawable/message_got_receipt_from_target"
+                    android:visibility="gone" />
 
-            <ProgressBar
-                android:id="@+id/waiting"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="right"
-                android:visibility="visible" />
+                <ProgressBar
+                    android:id="@+id/waiting"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="end"
+                    android:visibility="visible" />
 
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-</RelativeLayout>
+    </RelativeLayout>
+</com.leagueofshadows.enc.SwipeRevealLayout>
