--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -157,7 +157,7 @@
                 android:src="@drawable/baseline_camera_alt_white_24"
                 android:translationX="10dp"
                 android:translationY="@dimen/st_normal"
-                android:visibility="gone" />
+                android:visibility="invisible" />
 
 
             <ImageButton
@@ -170,7 +170,7 @@
                 android:src="@drawable/baseline_insert_photo_white_24"
                 android:translationX="10dp"
                 android:translationY="@dimen/st_normal"
-                android:visibility="gone" />
+                android:visibility="invisible" />
 
             <ImageButton
                 android:id="@+id/file"
@@ -183,6 +183,6 @@
                 android:tint="#FFFFFF"
                 android:translationX="10dp"
                 android:translationY="@dimen/st_normal"
-                android:visibility="gone" />
+                android:visibility="invisible" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
