--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -3,7 +3,7 @@
     <files-path
         name="local-images"
         path="/"/>
-    <external-files-path
+    <external-path
         name="all"
-        path="/"/>
+        path="."/>
 </paths>
