--- a/app/src/main/res/layout/activity_image_preview.xml
+++ b/app/src/main/res/layout/activity_image_preview.xml
@@ -17,7 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginBottom="50dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/background_tab_pressed"
         android:clickable="true"
         android:elevation="10dp"
