--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -2,7 +2,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#000000"
     android:layout_height="wrap_content">
 
 <LinearLayout
@@ -23,6 +22,11 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:id="@+id/image"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bytes" />
 
 </LinearLayout>
 </ScrollView>
