--- a/app/src/main/res/layout/receive_file.xml
+++ b/app/src/main/res/layout/receive_file.xml
@@ -27,6 +27,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:tint="#000000"
+                android:visibility="gone"
                 app:srcCompat="@drawable/baseline_reply_24" />
 
             <ImageButton
@@ -112,7 +113,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:background="@drawable/from_msg_background"
+                android:background="@drawable/file_background"
                 android:padding="8dp">
 
                 <ImageView
