--- a/app/src/main/res/menu/options.xml
+++ b/app/src/main/res/menu/options.xml
@@ -8,4 +8,9 @@
         android:id="@+id/contacts"/>
     <item android:title="@string/share_with_friends"
         android:id="@+id/share"/>
+    <item android:title="@string/syncing_contacts"
+        android:id="@+id/syncingIcon"
+        android:icon="@android:drawable/stat_notify_sync"
+        app:showAsAction="always"
+        android:visible="false"/>
 </menu>
